2004-05-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.schemas.in: Use colors from the basic GNOME 32-color
	palette for the match_color and current_match_color default values.

2004-05-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (apply_modifiers): Validate the UCS-4 code
	point returned by Unicode::tolower() or Unicode::totitle() before
	appending it to the string.  This is necessary because for example
	converting U+00DF to title case is an invalid operation.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (compose_impl): Print a warning message to
	the console if the format string contains an invalid substitution,
	rather than just silently ignoring the error.  This is mainly of
	importance to translators, as it provides them some feedback if
	they get it wrong.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (regexxer_create_file_tree): Move to anonymous
	namespace.  Not that it matters much, but I like it this way.
	* src/statusline.cc (regexxer_create_status_line): ditto.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::FileTree): Remove superfluous
	namespace qualification.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Avoid using postfix operators on subexpressions
	in the regex used to extract version numbers.  This makes the
	expression both simpler and more portable.
	* macros/pcre.m4 (PCRE_CHECK_VERSION): ditto.

2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/pcre.m4 (PCRE_CHECK_VERSION): Strip "-L/usr/lib" from
	PCRE_LIBS if necessary.  Strip "-I/usr/include" from PCRE_CFLAGS
	too -- although not required on Debian, it's better not to rely
	on this.

	* autogen.sh: Standard POSIX regexps suck: according to the sed
	documentation, both "\?" and "\+" are GNU extensions.  Replace by
	"\{0,1\}" and "\{1,\}", respectively.
	* macros/pcre.m4 (PCRE_CHECK_VERSION): ditto.
